[TF-186] Show discounts in header cart box

--- a/src/Resources/styles/front/common/todo.less
+++ b/src/Resources/styles/front/common/todo.less
@@ -65,3 +65,14 @@ button.active {
     cursor: pointer;
     text-decoration: underline;
 }
+
+//TODO KOD: TF-186
+.cart-detail__promo-code__item {
+    color: #85949f;
+    font-size: 14px;
+}
+
+.cart-detail__promo-code__discount {
+    color: #d53030;
+    float: right;
+}
