FE: "OrderDiscountLevel" in Cart, OrderPreview, and Order
- OrderDiscountLevel is activated automatically if the resulting discount is better for the user than the used promo code (type "promo code")
- it IS NOT possible to combine promo code (type "promo code") and order discout level
	-> it IS NOT possible to add promo code when there is already active OrderDiscountLevel with better discount
- it IS possible to combine OrderDiscountLevel with promo code with type "gift certificate"
- OrderPreviewCalculation refactored a little bit
	- removed useless extension of calculateTotalPrice() method
	- methods for discount calculation moved to QuantifiedProductDiscountCalculation class and new OrderDiscountCalculation class
- PromoCode: added helper methods for the type recognition
- when the order is finished, the active order level discount ID is removed from the session
- OrderFacadeEditTest: fix order items ids (because of newly applied order discount levels) and remove order discount item from the tested order
	- with the applied discount, after modifying the prices manually in tests, the resulting prices are negative and it is not worth modifying the demo data because of that
- OrderFacadeTest: fix asserted order items counts as the order now contain order discount level items, too

--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -123,10 +123,16 @@
                                                     <div class="table-cart__cell__price__primary">
                                                         {{ cartItemPrice.unitPrice.priceWithVat|price }}
                                                     </div>
+                                                    {%  if quantifiedItemsDiscountsByIndex[index] is defined %}
+                                                        {% set quantifiedItemDiscount = quantifiedItemsDiscountsByIndex[index] %}
+                                                        <div class="table-cart__cell__discount">
+                                                            -{{ quantifiedItemDiscount.priceWithVat|price }}
+                                                        </div>
+                                                    {% endif %}
                                                     {% if promoCodesIndexedById is not empty %}
                                                         <div class="table-cart__cell__discount">
                                                             {% for promoCodeId, promoCode in promoCodesIndexedById %}
-                                                                {% if cartItemDiscountsIndexedByPromoCodeId[promoCodeId][index] is not null %}
+                                                                {% if cartItemDiscountsIndexedByPromoCodeId[promoCodeId][index] is defined and cartItemDiscountsIndexedByPromoCodeId[promoCodeId][index] is not null %}
                                                                     &nbsp;{{ promoCode.code }}&nbsp;
                                                                     -{{ cartItemDiscountsIndexedByPromoCodeId[promoCodeId][index].priceWithVat|price }}
                                                                     <br>
