[TF-69] Pohoda Transfer: added attribute pohodaIdent for pricing group

--- a/templates/Component/Transfer/Pohoda/Customer/addressBook.xml.twig
+++ b/templates/Component/Transfer/Pohoda/Customer/addressBook.xml.twig
@@ -85,7 +85,7 @@
 
 				</adb:identity>
 
-				<adb:priceIDS>Registr</adb:priceIDS>
+				<adb:priceIDS>{{ pohodaCustomer.priceIds }}</adb:priceIDS>
 				<adb:region></adb:region>
 				<adb:phone>
 					<![CDATA[{{ pohodaCustomer.address.phone }}]]>
