design: add new icon for category list

--- a/src/Resources/styles/front/common/components/box/blog.less
+++ b/src/Resources/styles/front/common/components/box/blog.less
@@ -106,7 +106,7 @@
         }
 
         &__item {
-            .svg-arrow;
+            .svg-tail;
             .svg;
             position: relative;
             padding: 12px 35px;
@@ -124,7 +124,7 @@
             &:before {
                 position: absolute;
                 top: 50%;
-                left: 12px;
+                left: 7px;
                 transform: translateY(-50%);
 
                 font-size: @font-size-big;
