--- a/src/Resources/styles/front/common/components/list/categories.less
+++ b/src/Resources/styles/front/common/components/list/categories.less
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    margin-left: -@list-categories-item-gap;
+    margin: 0 -@list-categories-item-border-size -@list-categories-item-border-size 0;
 
     &__title {
         margin-bottom: 30px;
